--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @theme {
 
   /* Breakpoints */
- --breakpoint-sm: 640px;
+  --breakpoint-sm: 640px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 1024px;
   --breakpoint-xl: 1130px;
@@ -29,7 +29,7 @@ body {
 }
 
 .h1 {
-  @apply text-[40px] md:text-[52px] xl:text-[56px] leading-1 tracking-tight font-extrabold;
+  @apply text-[40px] md:text-[52px] xl:text-[56px] leading-[1] tracking-tight font-extrabold;
 }
 
 .h2 {
