--- a/app/globals.css
+++ b/app/globals.css
@@ -72,3 +72,8 @@ body {
 .btn-white {
   @apply bg-white hover:bg-white/90  text-primary;
 }
+
+/* swiper css */
+.swiper {
+  margin: 0 !important;
+}
